--- a/src/Components/Dashboard/Dashboard.module.css
+++ b/src/Components/Dashboard/Dashboard.module.css
@@ -1,6 +1,7 @@
 .delivery_info{
     height: 550px;
     padding: 0% 10%;
+    margin-bottom: 100px;
     border-radius: 36px;
     background: linear-gradient(90deg, #5B52A3, #40B8EA);
     display: flex;
@@ -35,41 +36,81 @@
     height: 450px;
 }
 
+.buy h3{
+    margin-bottom: 50px;
+}
+
 .sliderCategory{
-    width: 500px;
-    overflow: hidden;
+    margin: 0 auto;
+    width: 1000px;
     position: relative;
     margin-bottom: 50px;
 }
 
+.sliderCategory_wrapper{
+    overflow: hidden;
+}
+
 .sliderCategory_list{
     display: flex;
+    height: 100%;
     list-style-type: none;
     transition: transform 0.5s ease-in-out;
 }
 
 .buy__product_item{
     flex: none;
-    width: 100%;
+    width: 12.5%;
 }
 
-.butt{
+.selectCategory{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    background-color: #fff;
     font-weight: bold;
     width: 100%;
     padding: 20px;
+    height: 100%;
+    border: 0;
+}
+
+.selectCategory:hover{
+    box-shadow: inset 2px 2px black,
+                inset -2px -2px black;
+}
+
+.imageCategory{
+    width: 70px;
+    height: 70px;
+    border-radius: 100%;
+    margin-bottom: 5px;
 }
 
 .btn_prew,
 .btn_next{
+    font-size: 0;
     position: absolute;
     top: 50%;
+    transform: translateY(-50%);
     cursor: pointer;
+    border: 0;
+    background-color: #fff;
+    padding: 0;
 }
 
 .btn_next{
-    right: 0;
+    right: -50px;
+}
+
+.btn_next>img,
+.btn_prew>img{
+    width: 35px;
+    height: 25px;
 }
 
 .btn_prew{
-    left: 0;
+    left: -50px;
 }
