--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -3,6 +3,19 @@
     justify-content: space-around;
 }
 
+.block__burgerBtn{
+    display: none;
+    border: 0;
+    background: none;
+}
+
+.block__burgerBtn::before{
+    content: "Menu";
+    font-weight: bold;
+    color: #000;
+    font-size: 15px;
+}
+
 .list{
     display: flex;
     list-style-type: none;
@@ -49,4 +62,14 @@
     font-weight: bold;
     font-size: 13px;
     cursor: pointer;
+}
+
+@media(max-width:1024px){
+    .block__burgerBtn{
+        display: block;
+    }
+
+    .list{
+        display: none;
+    }
 }
