--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -86,15 +86,16 @@
         width: 250px;
     }
 
-    .block__list>li:active{
-        box-shadow: inset 2px 2px 5px #000,
-                    inset -2px -2px 5px #000;
-    }
-
     .block__list a{
         padding: 20px;
         display: block;
         text-align: center;
     }
-    
+}
+
+@media(max-width:425px){
+    .block{
+        flex-direction: column;
+        align-items: center;
+    }
 }
