--- a/src/Components/SelectCategory/SelectCategory.module.css
+++ b/src/Components/SelectCategory/SelectCategory.module.css
@@ -1,6 +1,6 @@
 .sliderProduct{
     margin: 0 auto;
-    width: 1000px;
+    width: 100%;
     height: 600px;
     position: relative;
     margin-bottom: 50px;
@@ -18,7 +18,6 @@
 }
 
 .sliderProduct__item{
-    transition: left ease-in-out 3s;
     flex: none;
     display: flex;
     flex-direction: column;
@@ -34,6 +33,11 @@
     align-self: flex-start;
 }
 
+.sliderProduct__item:nth-child(2)>p{
+    font-weight: bold;
+    text-align: center;
+}
+
 .sliderProduct__item:nth-child(2)>img{
     width: 200px;
 }
@@ -41,7 +45,6 @@
 .image{
     width: 100px;
     margin-top: 20px;
-
 }
 
 .prewSlide:nth-child(1),
@@ -124,7 +127,7 @@
     top: 50%;
     cursor: pointer;
     border: 0;
-    background-color: #fff;
+    background:none;
     padding: 0;
 }
 
@@ -145,5 +148,124 @@
 @media(max-width:1280px){
     .sliderProduct{
         height: 480px;
+    }
+}
+
+@media (max-width:1152px){
+    .sliderProduct{
+        width: 90%;
+    }
+
+    .sliderProduct__item:nth-child(2) span{
+        font-size: 15px;
+        padding: 20px;
+    }
+
+    .btn_prew{
+        left: 220px;
+    }
+
+    .btn_next{
+        right: 220px;
+    }
+}
+
+@media(max-width:1024px){
+    .sliderProduct{
+        height: 450px;
+    }
+
+    .btn_prew{
+        left: 190px;
+    }
+
+    .btn_next{
+        right: 190px;
+    }
+}
+
+@media(max-width:800px){
+    .sliderProduct__item:nth-child(2){
+        width: 50%;
+        font-size: 20px;
+    }
+
+    .sliderProduct__item{
+        width: 25%;
+    }
+
+    .sliderProduct__item:nth-child(2) span{
+        font-size: 13px;
+        padding: 5px 65px;
+    }
+
+    .sliderProduct__item:nth-child(2)>img{
+        width: 150px;
+    }
+
+    .btn_prew{
+        left: 150px;
+    }
+
+    .btn_next{
+        right: 150px;
+    }
+}
+
+@media(max-width:768px){
+    .sliderProduct{
+        height: 400px;
+    }
+
+    .sliderProduct__item:nth-child(2) span{
+        font-size: 13px;
+        padding: 5px 85px;
+    }
+
+    .sliderProduct__item:nth-child(2){
+        font-size: 15px;
+    }
+
+    .image{
+        width: 80px;
+    }
+}
+
+@media(max-width:425px){
+    .sliderProduct__item:not(:nth-child(2)){
+        display: none;
+    }
+
+    .sliderProduct__item:nth-child(2){
+        margin: 0 auto;
+    }
+
+    .btn_prew{
+        left: 10px;
+    }
+
+    .btn_next{
+        right: 10px;
+    }
+}
+
+@media(max-width:375px){
+    .sliderProduct__item:nth-child(2) span{
+        font-size: 13px;
+        padding: 5px 100px;
+    }
+}
+
+@media(max-width:320px){
+    .sliderProduct__item:nth-child(2)>img{
+        width: 100px;
+    }
+
+    .btn_prew{
+        left: -10px;
+    }
+
+    .btn_next{
+        right: -10px;
     }
 }
