--- a/src/Components/UserPage/UserPage.module.css
+++ b/src/Components/UserPage/UserPage.module.css
@@ -1,13 +1,64 @@
 .block__menu{
+    color: #fff;
     width: 100%;
-    height: 100px;
     border-radius: 36px;
     background: linear-gradient(90deg, #5B52A3, #40B8EA);
+}
+
+.block__menu_wrapper{
+    margin: 0 auto;
+    width: 95%;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    font-size: 15px;
+    height: 100px;
 }
 
-.block__menu>:nth-child(5){
-    margin-left: 250px;
+.block__menu_wrapper>:nth-child(5){
+    margin-left: 150px;
 }
+
+.block__menu_currentTime{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.block__menu_exchangeRates>button,
+.block__menu_bonusAccount>button{
+    background: none;
+    border: 0;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+    cursor: pointer;
+    gap: 5px;
+}
+
+.block__menu_buy>button{
+    background: linear-gradient(90deg, #00C97B, #00D981);
+    border-radius: 36px;
+    padding: 15px;
+    color: #fff;
+    font-weight: bold;
+    border: 0;
+    cursor: pointer;
+}
+
+.block__payment_btns>button{
+    padding: 7px;
+    background-color: #fff;
+    border-radius: 36px;
+    border: 0;
+    cursor: pointer;
+}
+
+.block__payment_btns>button:nth-child(1){
+    margin-right: 10px;
+}
+
+/* .info{
+    
+} */
