--- a/src/Components/Login/Login.module.css
+++ b/src/Components/Login/Login.module.css
@@ -2,21 +2,38 @@
     background-color: #1f242827;
     padding: 20px 0;
 }
+
 .login__form{
+    position: relative;
     font-weight: bold;
     width: 400px;
-    height: 450px;
+    height: 460px;
     margin: 0 auto;
     padding: 50px 30px;
     background-color: #fff;
     border-radius: 16px;
     box-shadow: 5px 0px 15px rgba(0, 0, 0, 0.511),
                 -5px 0px 15px rgba(0, 0, 0, 0.511);
+    display: flex;
+    flex-direction: column;
 }
 
 .login__form h2{
     font-size: 24px;
     line-height: 32px;
+}
+
+.preventionNone{
+    display: none;
+}
+
+.login__form_prevention{
+    display: block;
+    position: absolute;
+    color: red;
+    font-size: 13px;
+    width: 300px;
+    top: 115px;
 }
 
 .form__field{
