--- a/src/Components/UserPage/UserPage.module.css
+++ b/src/Components/UserPage/UserPage.module.css
@@ -38,11 +38,9 @@
 }
 
 .block__menu_buy>button{
-    background: linear-gradient(90deg, #00C97B, #00D981);
-    border-radius: 36px;
     padding: 15px;
     color: #fff;
-    font-weight: bold;
+    background: none;
     border: 0;
     cursor: pointer;
 }
@@ -59,6 +57,51 @@
     margin-right: 10px;
 }
 
-/* .info{
-    
-} */
+.block__menu_buy img{
+    width: 25px;
+    color: white;
+}
+
+.personal__information_wrapper{
+    display: flex;
+    border-radius: 16px;
+    width: 100%;
+    margin-top: 40px;
+    padding: 15px 15px 15px 30px;
+    box-shadow: 15px 0px 10px rgb(229, 229, 229),
+                -15px 0px 10px rgb(229, 229, 229);
+}
+
+.personal__information_data{
+    font-weight: bold;
+    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 40px;
+}
+
+.personal__information_data>p{
+    padding: 10px;
+}
+
+.personal__information_btns>button:first-child{
+    background: linear-gradient(90deg, #00C97B, #00D981);
+    border-radius: 36px;
+    padding: 15px;
+    color: #fff;
+    font-weight: bold;
+    border: 0;
+    cursor: pointer;
+    font-size: 13px;
+    margin-right: 20px;
+}
+
+.personal__information_btns>button:last-child{
+    color: #01CD7D;
+    border: none;
+    background: none;
+    font-weight: bold;
+    border-bottom: 2px dashed #01CD7D;
+    cursor: pointer;
+    padding: 5px 0px;
+}
