--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -61,6 +61,22 @@
     cursor: pointer;
 }
 
+/* .block_opacity{
+    position: absolute;
+    background-color: #fff;
+    width: 100vw;
+    height: 100vh;
+    opacity: 0;
+    z-index: -10;
+    transition: opacity ease-in-out 1s;
+}
+
+.transparent{
+    background-color: #fff;
+    opacity: 0.5;
+    z-index: 1;
+} */
+
 @media(max-width:1024px){
     .block__burgerBtn{
         display: block;
@@ -83,22 +99,6 @@
 
     .visibilityMenu{
         transform: translateX(300px);
-    }
-
-    .block_opacity{
-        position: absolute;
-        background-color: #fff;
-        width: 100vw;
-        height: 100vh;
-        opacity: 0;
-        z-index: -1;
-        transition: opacity ease-in-out 1s;
-    }
-    
-    .transparent{
-        background-color: #fff;
-        opacity: 0.5;
-        z-index: 1;
     }
 
     .block__list>li{
