--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,10 +1,13 @@
 .block{
-    margin:35px 0 50px 0;
+    padding: 25px 0;
 }
+
 @media(max-width:1024px) {
     .block{
         position: sticky;
         top: 0px;
         z-index: 2;
+        background-color: #fff;
+        padding: 15px 0;
     }
 }
