--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -1,91 +1,97 @@
 .block{
     display: flex;
     justify-content: space-around;
-    background-color: #fff;
-    padding: 5px 0px;
+    height: 50px;
 }
 
 .block__burgerBtn{
     display: none;
-    border: 0;
-    background: none;
-    cursor: pointer;
+}
+
+.block__logo a{
+    display: flex;
+    align-items: center;
+    font-size: 25px;
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+    gap: 10px;
 }
 
 .block__list{
     display: flex;
     list-style-type: none;
     gap: 10px;
-    font-size: 15px;
-    line-height: 16px;
-    font-weight: bold;
-    border: 0; 
 }
 
 .block__list a{
-    font-weight: bold;
-    text-decoration: none;
-    color: #1F2428;
     display: flex;
     align-items: center;
+    text-decoration: none;
+    color: black;
     height: 100%;
-    padding: 0 5px;
+    font-weight: bold;
+    position: relative;
+}
+
+.block__list a::before{
+    content: "";
+    border-bottom: 5px solid #00C97B;
+    width: 0%;
+    position: absolute;
+    bottom: 0;
+    
+}
+
+.block__list a:hover::before{
+    width: 100%;
+    transition: all 0.5s ease-in-out;
 }
 
 .block__user{
     display: flex;
+    gap: 10px;
+}
+
+.block__user_cart>img{
+    height: 50px;
+    border-radius: 100%
 }
 
 .block__logIn{
     display: flex;
-    color: black;
-    text-decoration: none;
     align-items: center;
+    text-decoration: none;
+    color: black;
     font-weight: bold;
-    font-size: 15px;
-    border: 0;
-    background-color: #fff;
-    gap: 10px;
-    cursor: pointer;
-    margin-right: 15px;
 }
 
 .block__contact_btn{
     border: 0;
     background-color: #00C97B;
-    color: #fff;
     border-radius: 36px;
-    padding: 10px 20px;
+    color: #fff;
+    padding: 0px 15px;
     font-weight: bold;
-    font-size: 13px;
     cursor: pointer;
 }
-
-/* .block_opacity{
-    position: absolute;
-    background-color: #fff;
-    width: 100vw;
-    height: 100vh;
-    opacity: 0;
-    z-index: -10;
-    transition: opacity ease-in-out 1s;
-}
-
-.transparent{
-    background-color: #fff;
-    opacity: 0.5;
-    z-index: 1;
-} */
 
 @media(max-width:1024px){
     .block{
         border-radius: 0px 0px 20px 20px;
     }
 
+    .block__burgerBtn:before{
+        content: "";
+    }
+
     .block__burgerBtn{
         display: block;
         position: absolute;
         z-index: 2;
+        
+        border: 2px solid #000;
+        width: 40px;
     }
 
     .block__list{
