--- a/src/Components/Dashboard/Dashboard.module.css
+++ b/src/Components/Dashboard/Dashboard.module.css
@@ -122,6 +122,58 @@
     left: -50px;
 }
 
+.block__subsubscription{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 250px;
+    border-radius: 36px;
+    background: linear-gradient(90deg, #5B52A3, #40B8EA);
+}
+
+.block__subsubscription_wrapper{
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: #fff;
+}
+
+.block__subsubscription_wrapper>p{
+    flex-basis: 30%;
+    font-weight: bold;
+    line-height: 30px;
+}
+
+.block__subsubscription_email{
+    flex-basis: 40%;
+}
+
+.block__subsubscription_email img{
+    transform: translateY(4px);
+}
+
+.block__subsubscription_wrapper input{
+    margin-top: 5px;
+    width: 100%;
+    border: 0;
+    border-bottom: 1px solid #fff;
+    background-color: transparent;
+    color: #fff;
+    font-size: 20px;
+}
+
+.block__subsubscription_wrapper button{
+    border: 0;
+    background-color: #00C97B;
+    color: #fff;
+    border-radius: 36px;
+    padding: 20px 30px;
+    font-weight: bold;
+    font-size: 13px;
+    cursor: pointer;
+}
+
 @media(max-width: 1280px){
     .delivery_info{
         height: 450px;
@@ -185,6 +237,24 @@
     .buy__product_item{
         width: 25%;
     }
+
+    .block__subsubscription{
+        height: 150px;
+    }
+
+    .block__subsubscription_wrapper>p{
+        font-size: 15px;
+        line-height: 20px;
+    }
+
+    .block__subsubscription_email,
+    .block__subsubscription_email input{
+        font-size: 15px;
+    }
+
+    .block__subsubscription_wrapper button{
+        padding: 15px 20px;
+    }
 }
 
 @media(max-width:768px){
@@ -228,6 +298,22 @@
     .buy h3{
         margin-bottom: 20px;
     }
+
+    .block__subsubscription_wrapper{
+        flex-direction: column;
+    }
+
+    .block__subsubscription_wrapper>p,
+    .block__subsubscription_email,
+    .block__subsubscription_email input{
+        font-size: 13px;
+        text-align: center;
+    }
+
+    .block__subsubscription_wrapper button{
+        margin-top: 10px;
+        padding: 10px 20px;
+    }
 }
 
 @media(max-width:375px){
@@ -242,6 +328,10 @@
 
     .btn_prew{
         left: -38px;
+    }
+
+    .block__subsubscription{
+        height: 180px;
     }
 }
 
