--- a/src/Components/Login/Login.module.css
+++ b/src/Components/Login/Login.module.css
@@ -6,7 +6,7 @@
     position: relative;
     font-weight: bold;
     width: 400px;
-    margin: 0 auto;
+    margin: 20px auto 0px auto;
     padding: 40px 30px;
     background-color: #ededed;
     border-radius: 16px;
